@@ -5,6 +5,9 @@ WIP
   - Fixed an issue where some vehicle info is missing while importing from LMU Rest API.
     Make sure to import again to update all vehicle brand info from LMU.
 
+* Tyre wear Widget
+  - Now uses laptime pace for calculating "tyre lifespan in minutes".
+
 2.17.4 (2024-08-30)
 -----------------------------
 * General
